enh: Adding automatic load, list and update after list.

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -26,14 +26,34 @@
     </ion-item>
 
 
-    <!-- <ion-item>
-      <ion-label>Gaming</ion-label>
-      <ion-select [(ngModel)]="gaming">
-        <ion-option value="nes">Marvel</ion-option>
-        <ion-option value="n64">DC</ion-option>
+    <ion-grid>
+  <ion-row>
+    <ion-col>
+      Nombre
+    </ion-col>
+    <ion-col>
+      Apellido
+    </ion-col>
+  </ion-row>
+</ion-grid>
 
-      </ion-select>
-    </ion-item> -->
+    <ion-grid>
+  <ion-row *ngFor="let p of personas | keys; let i = index">
+    <ion-col>
+      {{personas[p].nombre}}
+    </ion-col>
+    <ion-col>
+      {{personas[p].apellido}}
+    </ion-col>
+    <ion-col>
+      <div class="row">
+        <div class="col-md-12 text-right">
+          <button ion-button color="Primary" (click)="Eliminar(p)">Borrar</button>
+        </div>
+      </div>
+    </ion-col>
+  </ion-row>
+</ion-grid>
 
 
   </ion-list>
