--- a/src/pages/chat/chat.html
+++ b/src/pages/chat/chat.html
@@ -15,6 +15,11 @@
 
 
 
-<ion-content padding>
 
+<ion-content padding>
+  <ul>
+    <li class="text" *ngFor="let item of items | async">
+      {{item |  json}} 
+    </li>
+  </ul>
 </ion-content>
