--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -9,7 +9,7 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>Login</ion-title>
+    <ion-title>Chat</ion-title>
   </ion-navbar>
 </ion-header>
 
@@ -23,8 +23,5 @@
 
 </div>
 
-  <button (click)="chatService.logout()"
-          *ngIf="chatService.usuario.uid"
-          ion-button color="danger" outline>Salir</button>
 
 </ion-content>
