enh: Adding facebook as way of loging

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -19,7 +19,7 @@
 
 <div *ngIf="!chatService.usuario.uid" class="">
   <button (click)="ingresar('google')" ion-button color="danger" round>Google</button>
-  <button (click)="ingresar('twitter')"ion-button round>Twitter</button>
+  <button (click)="ingresar('facebook')"ion-button round>Facebook</button>
 
 </div>
 
