--- a/src/pages/chat/chat.html
+++ b/src/pages/chat/chat.html
@@ -48,10 +48,13 @@
   <ion-item>
     <ion-label floating>Mensaje a enviar</ion-label>
     <ion-input name="mensaje"
-              [(ngModel)]="mensaje"
-              (keyup.enter)="enviar_mensaje()">
+               [(ngModel)]="mensaje">
     </ion-input>
   </ion-item>
+
+  <button
+
+            (click)="enviar_mensaje()" ion-button color="danger" round>Enviar</button>
 
 
 
